Modify Asset: - Import asset and display with specification ,add cache - Add asset borrowing - Send email contact form